--- a/Language Testing/index.html
+++ b/Language Testing/index.html
@@ -8,8 +8,12 @@
 </head>
 <body onload="SetupLanguageTesting()">
   <h1>Language Testing</h1>
+
+  <div id="tablediv"></div>
+
   <textarea id="status" value=""></textarea>
   <script src="img/jquery.min.js"></script>
+  <script src="../Library/script.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
