--- a/Language Testing/index.html
+++ b/Language Testing/index.html
@@ -16,4 +16,22 @@
   <script src="../Library/script.js"></script>
   <script src="script.js"></script>
 </body>
+</html> <!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width" />
+  <title>Language Testing</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body onload="SetupLanguageTesting()">
+  <h1>Language Testing</h1>
+
+  <div id="tablediv"></div>
+
+  <textarea id="status" value=""></textarea>
+  <script src="img/jquery.min.js"></script>
+  <script src="../Library/script.js"></script>
+  <script src="script.js"></script>
+</body>
 </html>
