removed this.angle from the Vector class and replaced with GetDirection and SetDirection

--- a/Library Testing/index.html
+++ b/Library Testing/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body onload="Setup()">
-  <h1>Language Testing</h1>
+  <h1>Library Testing</h1>
   <textarea id="status" value=""></textarea>
   <div id="tabletest"></div>
 
