Added 9 ball to Canvas Play

--- a/Canvas Play/index.html
+++ b/Canvas Play/index.html
@@ -27,6 +27,8 @@ Your browser does not support the HTML canvas tag.</canvas>
 <input type="button" value="Clear Drawing" onclick="Clear()"><br><br>
 <input type="button" value="Random" onclick="Animate(true)">
 <input type="button" value="Stop" onclick="Animate(false)">
+Pool<input id="pool" type="checkbox" value="Pool">
+Offset<input id="offset" type="text" size="4" value="0">
 <p id="info" value=""/>
 </div>
 
