Added radio buttons to select the game type

--- a/Canvas Play/index.html
+++ b/Canvas Play/index.html
@@ -26,9 +26,12 @@ Your browser does not support the HTML canvas tag.</canvas>
 <input id="drawitem" type="button" value="Draw" onclick="drawItem()">
 <input type="button" value="Clear Drawing" onclick="Clear()"><br><br>
 <input type="button" value="Random" onclick="Animate(true)">
-<input type="button" value="Stop" onclick="Animate(false)">
-Pool<input id="pool" type="checkbox" value="Pool">
+<input type="button" value="Stop" onclick="Animate(false)"><br>
+Random<input type="radio" id="random" name="option" checked>
+Pool<input type="radio" id="pool" name="option">
+One Ball<input type="radio" id="oneball" name="option"><br>
 Offset<input id="offset" type="text" size="4" value="0">
+Speed<input id="speed" type="text" size="4" value="10">
 <p id="info" value=""/>
 </div>
 
