--- a/Canvas Play/index.html
+++ b/Canvas Play/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width" />
   <title>Play</title>
   <link rel="stylesheet" href="style.css" />
-  <h1>Play</h1>
+  <h1>Canvas Test 001</h1> 
 </head>
 <body onload="setup()">
 
