--- a/Canvas Play/index.html
+++ b/Canvas Play/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width" />
   <title>Play</title>
   <link rel="stylesheet" href="style.css" />
-  <h1>Canvas Test 004</h1> 
+  <h1>Canvas Test 005</h1>
 </head>
 <body onload="setup()">
 
@@ -23,7 +23,7 @@ Your browser does not support the HTML canvas tag.</canvas>
   <option value="Centered X">Centered X</option>
 </select>
 <input id="showvertices" type="checkbox" checked> Show Vertices<br>
-<input id="drawitem" type="button" value="Draw" onclick="drawItem()">
+<input id="drawitem" type="button" value="Random Draw" onclick="drawItem()">
 <input type="button" value="Clear Drawing" onclick="Clear()"><br><br>
 <input type="button" value="Run" onclick="Animate(true)">
 <input type="button" value="Stop" onclick="Animate(false)"><br>
