added a plane object. need to rotate it to follow it’s heading.

--- a/Canvas Play/index.html
+++ b/Canvas Play/index.html
@@ -18,6 +18,7 @@ Your browser does not support the HTML canvas tag.</canvas>
 <select name="Objects" id="objects">
   <option value="" disabled="disabled" selected="selected">Select an object to draw</option>
   <option value="Circle">Circle</option>
+  <option value="Plane">Plane</option>
   <option value="Rectangle">Rectangle</option>
   <option value="Square">Square</option>
   <option value="Centered X">Centered X</option>
