Added vector snap

--- a/Canvas Play/index.html
+++ b/Canvas Play/index.html
@@ -15,6 +15,7 @@ Your browser does not support the HTML canvas tag.</canvas>
 </div>
 
 <div id="drawitemdiv">
+<input id="snapheading" type="checkbox" checked> Snap Heading<br>
 <input id="drawrunway" type="checkbox" checked> Draw Runway<br>
 <input id="drawgrid" type="checkbox" checked> Draw Grid<br>
 <input id="showvertices" type="checkbox" checked> Show Vertices<br>
