fixed pool and one ball options

--- a/Canvas Play/index.html
+++ b/Canvas Play/index.html
@@ -22,8 +22,7 @@ Your browser does not support the HTML canvas tag.</canvas>
 <input id="collisionon" type="checkbox" checked> Collision Decection<br>
 <input id="pause" type="checkbox">Pause<br>
 <select name="Objects" id="objects">
-  <option value="" disabled="disabled" selected="selected">Select an object to draw</option>
-  <option value="Circle">Circle</option>
+  <option value="Circle" checked>Circle</option>
   <option value="Plane">Plane</option>
   <option value="Rectangle">Rectangle</option>
   <option value="Square">Square</option>
