--- a/Canvas Play/index.html
+++ b/Canvas Play/index.html
@@ -15,6 +15,7 @@ Your browser does not support the HTML canvas tag.</canvas>
 </div>
 
 <div id="drawitemdiv">
+<input id="slewheading" type="checkbox" checked> Slew Heading<br>
 <input id="snapheading" type="checkbox" checked> Snap Heading<br>
 <input id="drawrunway" type="checkbox" checked> Draw Runway<br>
 <input id="drawgrid" type="checkbox" checked> Draw Grid<br>
@@ -39,6 +40,7 @@ Pool<input type="radio" id="pool" name="option">
 One Ball<input type="radio" id="oneball" name="option"><br>
 Offset<input id="offset" type="text" size="4" value="0">
 Speed<input id="speed" type="text" size="4" value="5">
+Friction <input id="friction" type="text" size="6" value="1">
 <p id="info" value=""/>
 </div>
 
