--- a/Canvas Play/index.html
+++ b/Canvas Play/index.html
@@ -17,11 +17,14 @@ Your browser does not support the HTML canvas tag.</canvas>
 <div id="drawitemdiv">
 <input id="slewheading" type="checkbox" checked> Slew Heading<br>
 <input id="snapheading" type="checkbox" checked> Snap Heading<br>
-<input id="drawrunway" type="checkbox" checked> Draw Runway<br>
+<input id="drawrunway" type="checkbox" > Draw Runway<br>
 <input id="drawgrid" type="checkbox" checked> Draw Grid<br>
 <input id="showvertices" type="checkbox" checked> Show Vertices<br>
 <input id="collisionon" type="checkbox" checked> Collision Decection<br>
+<input id="gravityon" type="checkbox" onchange="Gravity()"> Gravity<br>
+<input id="dragon" type="checkbox" onchange="Drag()"> Drag<br>
 <input id="pause" type="checkbox">Pause<br>
+
 <select name="Objects" id="objects">
   <option value="Circle" checked>Circle</option>
   <option value="Plane">Plane</option>
@@ -39,8 +42,9 @@ Random<input type="radio" id="random" name="option" checked>
 Pool<input type="radio" id="pool" name="option">
 One Ball<input type="radio" id="oneball" name="option"><br>
 Offset<input id="offset" type="text" size="4" value="0">
-Speed<input id="speed" type="text" size="4" value="5">
-Friction <input id="friction" type="text" size="6" value="1">
+Speed<input id="speed" type="text" size="4" value="3"><br>
+Drag <input id="drag" type="text" size="6" value=".2"> 
+Gravity <input id="gravity" type="text" size="6" value=".2"> 
 <p id="info" value=""/>
 </div>
 
