--- a/Chart class/index.HTML
+++ b/Chart class/index.HTML
@@ -15,12 +15,12 @@
 
   <div id="chart-container" class="chart"></div>
   <div id="chart-commands" class="chart"></div>
+  <button onclick="get('debug').innerHTML=''">Clear</button>
   <textarea id="debug" rows="20" cols="80"></textarea>
   <script src="tools.js"></script>
   <script src="script.js"></script>
   <script>
-    // Example usage
-    const chart = new LineChart('chart-container', 'chart-commands',800, 400);
+    const chart = new LineChart('chart-container', 'chart-commands');
 
     // Adding data series
     chart.addSeries('Sin', 'red');
@@ -40,17 +40,21 @@
       },25);}
     
     if(1){
-    for(let x=-50;x<=50;x+=.1){
-      chart.addPoint('Sinc', x, 5*x==0?0:Math.sin(x)/x);
-    }}
+    for(let x=-10;x<=10;x+=.1)
+      chart.addPoint('Sinc', x, Math.sin(x)/x);
+	for(let x=-10;x<=10;x+=.1)
+      chart.addPoint('Cos', x, Math.cos(x));
+	for(let x=-10;x<=10;x+=.1)
+      chart.addPoint('Sin', x, Math.sin(x));
+    }
 
-    if(1){
+    if(0){
     let x = 0;
     setInterval( () => {
       chart.addPoint('Sin', x, Math.sin(x));
       chart.addPoint('Cos', x, Math.cos(x));
       x+=.1;
-    }, 50);} 
+    }, 10);}  
 
   </script> 
 </body>
